update styles and text

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <br>
                 <h1>Theja Kumar Moolinti</h1>
                 <h2>Full Stack Developer</h2>
-                <p>5+ years of experience in designing and developing scalable, high-performance applications including mission-critical healthcare and enterprise solutions.</p>
-                
+                <p>👋 Hi, I’m Theja — a Full Stack Developer with 5+ years of experience building scalable, high-performance applications.  
+                    I’m passionate about creating software that makes life easier, businesses smarter, and technology more impactful.</p>                
                 <div class="social-links">
                     <a href="mailto:theja.moolinti@gmail.com" class="social-link" title="Email">
                         <i class="fas fa-envelope"></i>
